# moos-ivp-guerledan

./: .gitignore  README.md
.svn/: wc.db
Interface-Python/: PythonInterface.py  PythonInterface.py~  fonctions_coherence.py  fonctions_coherence.py~  fonctions_coherence2.py~  fonctions_coherence_old.py  fonctions_validite.py  fonctions_validite.py~
missions/: .LastOpenedMOOSLogDirectory  guerledan_mars_2017.bhv
missions/bateau/: .LastOpenedMOOSLogDirectory  Thumbs.db  bateau.moos  moulin_blanc.bhv
missions/bateau/MOOSLog_17_10_2016_____16_07_29/: MOOSLog_17_10_2016_____16_07_29.alog  MOOSLog_17_10_2016_____16_07_29.ylog
missions/guerledan/: .LastOpenedMOOSLogDirectory  guerledan.moos  guerledan.moos~  guerledan2.moos  log.txt
missions/guerledan_mars_2017/: .LastOpenedMOOSLogDirectory  a_faire_sur_nuc.txt  guerledan.bhv  guerledan.moos  guerledan.moos~  guerledan_mars_2017.moos
missions/guerledan_mars_2017/LogMoos_2_3_2017_____11_22_42/: LogMoos_2_3_2017_____11_22_42._moos  LogMoos_2_3_2017_____11_22_42.alog  LogMoos_2_3_2017_____11_22_42.slog  LogMoos_2_3_2017_____11_22_42.ylog
missions/guerledan_mars_2017/LogMoos_2_3_2017_____11_41_33/: LogMoos_2_3_2017_____11_41_33._moos  LogMoos_2_3_2017_____11_41_33.alog  LogMoos_2_3_2017_____11_41_33.slog  LogMoos_2_3_2017_____11_41_33.ylog
missions/guerledan_mars_2017/LogMoos_2_3_2017_____11_46_34/: LogMoos_2_3_2017_____11_46_34._moos  LogMoos_2_3_2017_____11_46_34.alog  LogMoos_2_3_2017_____11_46_34.slog  LogMoos_2_3_2017_____11_46_34.ylog
missions/guerledan_mars_test/: .LastOpenedMOOSLogDirectory  guerledan.bhv  guerledan.bhv~  guerledan.moos  guerledan.moos~  guerledan_mardi.moos  guerledan_mardi.moos~
missions/guerledan_mars_test/LogMoos_8_3_2017_____10_13_27/: LogMoos_8_3_2017_____10_13_27._moos  LogMoos_8_3_2017_____10_13_27.alog  LogMoos_8_3_2017_____10_13_27.slog  LogMoos_8_3_2017_____10_13_27.ylog
missions/guerledan_octobre_2016/: .LastOpenedMOOSLogDirectory  guerledan.moos
missions/m10_jake/: .LastOpenedMOOSLogDirectory
missions/test/: test_SBG_LAMB.moos
src/: CMakeLists.txt  CMakeLists.txt~
src/iGPS/: GPS.cpp  GPS.cpp~  GPS.h
src/iGPS/lib_nmea/src/: parse.c
src/iInsSBG/: CMakeLists.txt  InsSBG.cpp  InsSBG.cpp~  InsSBG.h  InsSBG_Info.cpp  InsSBG_Info.h  Makefile  cmake_install.cmake  iInsSBG.moos  main.cpp
src/iSounder/: CMakeCache.txt  Makefile  Sounder.cpp  cmake_install.cmake  main.cpp
src/lib_behavior_groupe3_guerledan/: BHV_Main.cpp  BHV_Main.h  CMakeLists.txt  CMakeLists.txt~
src/lib_sbgECom/: RTsys_README  install.sh
src/lib_sbgECom/Examples/ellipseMinimal/: ellipseMinimal
src/lib_sbgECom/Examples/ellipseMinimal/projects/unix/: build.sh
src/lib_sbgECom/Examples/ellipseMinimal/src/: ellipseMinimal.c
src/lib_sbgECom/Examples/ellipseOnboardMagCalib/: ellipseOnboardMagCalib
src/lib_sbgECom/Examples/ellipseOnboardMagCalib/projects/unix/: build.sh
src/lib_sbgECom/Examples/ellipseOnboardMagCalib/src/: ellipseOnboardMagCalib.c
src/lib_sbgECom/doc/: sbgECom Library.chm
src/lib_sbgECom/doc/html/: _sbg_e_can_id_8h_source.html  annotated.html  binary_log_debug_8h.html  binary_log_debug_8h_source.html  binary_log_dvl_8h.html  binary_log_dvl_8h_source.html  binary_log_ekf_8h.html  binary_log_ekf_8h_source.html  binary_log_event_8h.html  binary_log_event_8h_source.html  binary_log_gps_8h.html  binary_log_gps_8h_source.html  binary_log_imu_8h.html  binary_log_imu_8h_source.html  binary_log_mag_8h.html  binary_log_mag_8h_source.html  binary_log_odometer_8h.html  binary_log_odometer_8h_source.html  binary_log_pressure_8h.html  binary_log_pressure_8h_source.html  binary_log_ship_motion_8h.html  binary_log_ship_motion_8h_source.html  binary_log_status_8h.html  binary_log_status_8h_source.html  binary_log_usbl_8h.html  binary_log_usbl_8h_source.html  binary_log_utc_8h.html  binary_log_utc_8h_source.html  binary_logs_8h.html  binary_logs_8h_source.html  classes.html  commands_8h.html  commands_8h_source.html  commands_advanced_8h.html  commands_advanced_8h_source.html  commands_common_8h.html  commands_common_8h_source.html  commands_event_8h.html  commands_event_8h_source.html  commands_gnss_8h.html  (+150 more)
src/lib_sbgECom/include/sbgEComLib/misc/: sbgStreamBuffer.h
src/lib_sbgECom/projects/unix/: build.sh
src/pCustomLogger/: CMakeLists.txt  CMakeLists.txt~  CustomLogger.cpp  CustomLogger.h  CustomLogger.h~  CustomLogger_Info.cpp  CustomLogger_Info.h  main.cpp  pCustomLogger.moos
src/pLatLongToLamb/: CMakeLists.txt  LatLongToLamb.cpp  LatLongToLamb.cpp~  LatLongToLamb.h  LatLongToLamb_Info.cpp  LatLongToLamb_Info.h  main.cpp  pLatLongToLamb.moos
src/pLogLine/: CMakeLists.txt  LogLine.cpp  LogLine.cpp~  LogLine.h  LogLine.h~  LogLine_Info.cpp  LogLine_Info.h  main.cpp  pLogLine.moos
src/pMain/: .goutputstream-5IIRWY  CMakeLists.txt  Main.cpp  Main.cpp~  Main.h  Main.h~  Main_Info.cpp  Main_Info.h  main.cpp  pMain.moos
tmp/: test_pattern.py  test_pattern_2.0.py
(+293 files in other folders)
